auto-encoder cleanup

--- a/notebooks/auto_encoder.ipynb
+++ b/notebooks/auto_encoder.ipynb
@@ -92,6 +92,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "new_tokenized = pad_sentences(tokenized)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {
     "collapsed": false,
@@ -100,17 +111,6 @@
    "outputs": [],
    "source": [
     "X = np.array([transform_sent(s).flatten() for s in new_tokenized])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "new_tokenized = pad_sentences(tokenized)"
    ]
   },
   {
@@ -169,25 +169,6 @@
     "decoder_layer = autoencoder.layers[-1]\n",
     "# create the decoder model\n",
     "decoder = Model(input=encoded_input, output=decoder_layer(encoded_input))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 196,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "input_sequence = Input(shape=(198,300))\n",
-    "\n",
-    "encoded = LSTM(64)(input_sequence)\n",
-    "\n",
-    "decoded = RepeatVector(198)(encoded)\n",
-    "decoded = LSTM(300, return_sequences=True)(decoded)\n",
-    "\n",
-    "sequence_autoencoder = Model(input_sequence, decoded)\n",
-    "encoder = Model(input_sequence, encoded)"
    ]
   },
   {
@@ -307,6 +288,7 @@
     {
      "ename": "KeyboardInterrupt",
      "evalue": "",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
@@ -317,8 +299,7 @@
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/keras/backend/theano_backend.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m    790\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    791\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 792\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfunction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    793\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    794\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/theano/compile/function_module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    857\u001b[0m         \u001b[0mt0_fn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    858\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 859\u001b[0;31m             \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    860\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    861\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'position_of_error'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ],
-     "output_type": "error"
+     ]
     }
    ],
    "source": [
@@ -348,7 +329,7 @@
    },
    "outputs": [],
    "source": [
-    "pickle.dump(encoded_sents, open('LSTM_encoded', 'wb'))"
+    "pickle.dump(encoded_sents, open('encoded.pkl', 'wb'))"
    ]
   },
   {
@@ -359,44 +340,7 @@
    },
    "outputs": [],
    "source": [
-    "encoder.save_weights('LSTM_encoder_weights')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "____________________________________________________________________________________________________\n",
-      "Layer (type)                     Output Shape          Param #     Connected to                     \n",
-      "====================================================================================================\n",
-      "input_1 (InputLayer)             (None, 59400)         0                                            \n",
-      "____________________________________________________________________________________________________\n",
-      "dense_1 (Dense)                  (None, 15000)         891015000   input_1[0][0]                    \n",
-      "____________________________________________________________________________________________________\n",
-      "dense_2 (Dense)                  (None, 1000)          15001000    dense_1[0][0]                    \n",
-      "____________________________________________________________________________________________________\n",
-      "dense_3 (Dense)                  (None, 300)           300300      dense_2[0][0]                    \n",
-      "____________________________________________________________________________________________________\n",
-      "dense_4 (Dense)                  (None, 1000)          301000      dense_3[0][0]                    \n",
-      "____________________________________________________________________________________________________\n",
-      "dense_5 (Dense)                  (None, 15000)         15015000    dense_4[0][0]                    \n",
-      "____________________________________________________________________________________________________\n",
-      "dense_6 (Dense)                  (None, 59400)         891059400   dense_5[0][0]                    \n",
-      "====================================================================================================\n",
-      "Total params: 1812691700\n",
-      "____________________________________________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "autoencoder.summary()"
+    "encoder.save('encoder')"
    ]
   },
   {
@@ -406,9 +350,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -420,7 +362,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
